--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-
-      - run: mix deps.get
+      - run: mix local.hex --force
+      - run: mix do deps.get, deps.compile
       - run: mix dialyzer
       - run: mix test
