--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,5 +12,14 @@ jobs:
       - checkout
       - run: mix local.hex --force
       - run: mix do deps.get, deps.compile
-      - run: mix dialyzer
+      - restore_cache:
+          keys:
+            - v1-plt-cache-{{ checksum "mix.lock" }}
+            - v1-plt-cache
+      - run: mix dialyzer --plt
+      - save_cache:
+          key: v1-plt-cache-{{ checksum "mix.lock" }}
+          paths:
+            - _build
+            - ~/.mix
       - run: mix test
