--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - checkout
       - run: mix local.hex --force
+      - run: mix local.rebar --force
       - run: mix do deps.get, deps.compile
       - restore_cache:
           keys:
