--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,17 +3,17 @@ jobs:
   build:
     docker:
       - image: circleci/elixir:1.10.3
-
-    working_directory: ~/repo
+        environment:
+          MIX_ENV: test
     steps:
       - checkout
       - run: mix local.hex --force
       - run: mix local.rebar --force
       - restore_cache:
-          key: deps-cache-{{ checksum "mix.lock" }}
+          key: v1-deps-cache-{{ checksum "mix.lock" }}
       - run: mix do deps.get, deps.compile
       - save_cache:
-          key: deps-cache-{{ checksum "mix.lock" }}
+          key: v1-deps-cache-{{ checksum "mix.lock" }}
           paths:
             - deps
             - ~/.mix
@@ -31,27 +31,6 @@ jobs:
             - deps
             - ~/.mix
 
-  format_check:
-    docker:
-      - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
-    steps:
-      - checkout
-      - run: mix format --check-formatted
-
-  test:
-    docker:
-      - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
-    steps:
-      - run: mix test
-      - run: mix credo
-      - run: mix coveralls
-    override:
-      - mix coveralls.circle
-
   dialyzer:
     docker:
       - image: circleci/elixir:1.10.3
@@ -63,4 +42,64 @@ jobs:
       - restore_cache:
           keys:
             - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
-      - run: mix dialyzer --halt-exit-status
+      - run:
+          name: Execute dialyzer
+          command: mix dialyzer --halt-exit-status
+
+  test:
+    docker:
+      - image: circleci/elixir:1.10.3
+
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-deps-cache-{{ checksum "mix.lock" }}
+      - run: mix coveralls.html
+      - store_artifacts:
+          path: cover
+          destination: coverage_results
+    override:
+      - mix coveralls.circle
+
+  format_check:
+    docker:
+      - image: circleci/elixir:1.10.3
+        environment:
+          MIX_ENV: test
+    steps:
+      - checkout
+
+      - run: mix format --check-formatted
+
+  credo:
+    docker:
+      - image: circleci/elixir:1.10.3
+        environment:
+          MIX_ENV: test
+    steps:
+      - checkout
+      - run: echo "$OTP_VERSION $ELIXIR_VERSION" > .version_file
+      - restore_cache:
+          keys:
+            - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
+      - run:
+          name: Execute credo
+          command: mix credo
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - format_check:
+          requires:
+            - build
+      - dialyzer:
+          requires:
+            - build
+      - test:
+          requires:
+            - build
+      - credo:
+          requires:
+            - build
