--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,105 +1,27 @@
-version: 2.1
+# Elixir CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-elixir/ for more details
+version: 2
 jobs:
   build:
     docker:
       - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
+
+    working_directory: ~/repo
     steps:
       - checkout
       - run: mix local.hex --force
-      - run: mix local.rebar --force
-      - restore_cache:
-          key: v1-deps-cache-{{ checksum "mix.lock" }}
       - run: mix do deps.get, deps.compile
-      - save_cache:
-          key: v1-deps-cache-{{ checksum "mix.lock" }}
-          paths:
-            - deps
-            - ~/.mix
-            - _build
-      - run: mix compile
-      - run: echo "$OTP_VERSION $ELIXIR_VERSION" > .version_file
       - restore_cache:
           keys:
-            - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
+            - v1-plt-cache-{{ checksum "mix.lock" }}
+            - v1-plt-cache
       - run: mix dialyzer --plt
       - save_cache:
-          key: plt-cache-{{ checksum ".version_file"  }}-{{ checksum "mix.lock" }}
+          key: v1-plt-cache-{{ checksum "mix.lock" }}
           paths:
             - _build
-            - deps
             - ~/.mix
-
-  dialyzer:
-    docker:
-      - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
-    steps:
-      - checkout
-      - run: echo "$OTP_VERSION $ELIXIR_VERSION" > .version_file
-      - restore_cache:
-          keys:
-            - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
-      - run:
-          name: Execute dialyzer
-          command: mix dialyzer --halt-exit-status
-
-  test:
-    docker:
-      - image: circleci/elixir:1.10.3
-
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-deps-cache-{{ checksum "mix.lock" }}
-      - run: mix coveralls.html
-      - store_artifacts:
-          path: cover
-          destination: coverage_results
-    override:
-      - mix coveralls.circle
-
-  format_check:
-    docker:
-      - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
-    steps:
-      - checkout
-
-      - run: mix format --check-formatted
-
-  credo:
-    docker:
-      - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
-    steps:
-      - checkout
-      - run: echo "$OTP_VERSION $ELIXIR_VERSION" > .version_file
-      - restore_cache:
-          keys:
-            - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
-      - run:
-          name: Execute credo
-          command: mix credo
-
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
-      - format_check:
-          requires:
-            - build
-      - dialyzer:
-          requires:
-            - build
-      - test:
-          requires:
-            - build
-      - credo:
-          requires:
-            - build
+      - run: mix test
+      - run: mix credo
+      - run: mix coveralls.circle
