--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,20 +21,7 @@ jobs:
             - deps
             - ~/.mix
             - _build
-
       - run: mix compile
-
-      - run: echo "$OTP_VERSION $ELIXIR_VERSION" > .version_file
-      - restore_cache:
-          keys:
-            - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
-      - run: mix dialyzer --plt
-      - save_cache:
-          key: plt-cache-{{ checksum ".version_file"  }}-{{ checksum "mix.lock" }}
-          paths:
-            - _build
-            - deps
-            - ~/.mix
 
   dialyzer:
     docker:
@@ -48,9 +35,13 @@ jobs:
       - restore_cache:
           keys:
             - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
-      - run:
-          name: Execute dialyzer
-          command: mix dialyzer --halt-exit-status
+      - run: mix dialyzer --plt --halt-exit-status
+      - save_cache:
+          key: plt-cache-{{ checksum ".version_file"  }}-{{ checksum "mix.lock" }}
+          paths:
+            - _build
+            - deps
+            - ~/.mix
 
   test:
     docker:
