--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ jobs:
 
     steps:
       - checkout
-
       - run: mix local.hex --force
       - run: mix local.rebar --force
 
@@ -21,27 +20,7 @@ jobs:
             - deps
             - ~/.mix
             - _build
-      - run: mix compile
-
-  dialyzer:
-    docker:
-      - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
-
-    steps:
-      - checkout
-      - run: echo "$OTP_VERSION $ELIXIR_VERSION" > .version_file
-      - restore_cache:
-          keys:
-            - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
-      - run: mix dialyzer --plt --halt-exit-status
-      - save_cache:
-          key: plt-cache-{{ checksum ".version_file"  }}-{{ checksum "mix.lock" }}
-          paths:
-            - _build
-            - deps
-            - ~/.mix
+      - run: mix dialyzer --plt
 
   test:
     docker:
