--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,16 @@ jobs:
             - deps
             - ~/.mix
             - _build
+      - run: echo "$OTP_VERSION $ELIXIR_VERSION" > .version_file
+      - restore_cache:
+          keys:
+            - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
+      - save_cache:
+          key: plt-cache-{{ checksum ".version_file"  }}-{{ checksum "mix.lock" }}
+          paths:
+            - _build
+            - deps
+            - ~/.mix
 
   # dialyzer:
   #   docker:
