--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - restore_cache:
           keys:
             - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
-      - run: mix dialyxir --plt
+      - run: mix dialyzer --plt
       - save_cache:
           key: plt-cache-{{ checksum ".version_file"  }}-{{ checksum "mix.lock" }}
           paths:
