--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,13 @@
 version: 2.1
+defaults: &defaults
+  docker:
+    - image: circleci/elixir:1.10.3
+      environment:
+        MIX_ENV: test
+
 jobs:
   build:
-    docker:
-      - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
-
+    <<: *defaults
     steps:
       - checkout
       - run: mix local.hex --force
@@ -26,17 +28,14 @@ jobs:
             - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
       - run: mix dialyzer --plt
       - save_cache:
-          key: plt-cache-{{ checksum ".version_file"  }}-{{ checksum "mix.lock" }}
+          key: plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
           paths:
             - _build
             - deps
             - ~/.mix
 
   dialyzer:
-    docker:
-      - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
+    <<: *defaults
     steps:
       - checkout
       - run: echo "$OTP_VERSION $ELIXIR_VERSION" > .version_file
@@ -49,9 +48,7 @@ jobs:
           command: mix dialyzer --halt-exit-status
 
   test:
-    docker:
-      - image: circleci/elixir:1.10.3
-
+    <<: *defaults
     steps:
       - checkout
       - restore_cache:
@@ -64,22 +61,13 @@ jobs:
           destination: coverage_results
 
   format_check:
-    docker:
-      - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
-
+    <<: *defaults
     steps:
       - checkout
-
       - run: mix format --check-formatted
 
   credo:
-    docker:
-      - image: circleci/elixir:1.10.3
-        environment:
-          MIX_ENV: test
-
+    <<: *defaults
     steps:
       - checkout
       - run: echo "$OTP_VERSION $ELIXIR_VERSION" > .version_file
