wrong cache maybe

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,7 @@ jobs:
       - run: echo "$OTP_VERSION $ELIXIR_VERSION" > .version_file
       - restore_cache:
           keys:
-            - v1-plt-cache-{{ checksum "mix.lock" }}
-            - v1-plt-cache
+            - plt-cache-{{ checksum ".version_file" }}-{{ checksum "mix.lock" }}
       - run:
           name: Execute dialyzer
           command: mix dialyzer --halt-exit-status
