--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ name: test
 "on": [pull_request, push]
 
 env:
-  GITHUB_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   test:
